feat: added config parse from pod annotations and container store

--- a/k3s/config.toml.tmpl
+++ b/k3s/config.toml.tmpl
@@ -2,3 +2,7 @@
 
 [plugins."io.containerd.grpc.v1.cri".containerd.runtimes."shiftpod"]
   runtime_type = "io.containerd.shiftpod.v2"
+  pod_annotations = [
+    "shiftpod/migrate",
+    "shiftpod/enable-checkpoint"
+  ]
